--- a/style.css
+++ b/style.css
@@ -38,12 +38,11 @@ header>h1{
 }
 
 header>p{
-    padding-top: 10px;
     padding-bottom: 50px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-header a{
+a{
     text-decoration: none;
     font-weight: bold;
     color: white;
@@ -53,15 +52,19 @@ header a:hover{
     text-decoration: underline;
 }
 
-section>pre{
-    white-space: pre-line;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
     font-size: 3.5vw;
-    font-family: var(--fonte2);
     font-weight: bold;
+}
+
+section>pre{   
+    padding-bottom: 2em;
+    white-space: pre-line;
+    font-family: var(--fonte2);
 }
 
 section.imagem{
@@ -77,7 +80,6 @@ section.imagem>pre{
     background-color: rgba(0, 0, 0, 0.507);
     text-shadow: 1px 1px 0px black;
     padding: 5px;
-    margin: 25px;
 }
 
 section#img01{
@@ -93,14 +95,4 @@ footer{
     background-color: var(--cor1);
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-footer a{
-    text-decoration: none;
-    font-weight: bold;
-    color: white;
-}
-
-footer a:hover{
-    text-decoration: underline;
 }
